--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
+  "name": "primer-search",
+  "version": "1.0.0",
+  "main": "src/server/app.js",
+  "scripts": {
+    "start": "node src/server/app",
+    "dev": "node --watch src/server/app"
+  },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "express": "^4.19.2",
+    "node-html-parser": "^6.1.13"
+  },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "eslint": "^9.9.0",
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "htmlhint": "^1.1.4",
     "stylelint": "^16.8.2",
