--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "node-html-parser": "^6.1.13"
+    "node-html-parser": "^6.1.13",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
